--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -7,3 +7,8 @@
 #greeting-container {
   margin-top: 20px;
 }
+
+#background {
+    border: 5px ridge rgb(43, 132, 146);
+    background-color: rgba(135, 194, 233, 0.534)
+}
